# ansible-vip-migration

./: .env.example  .gitignore  README.md  ansible.cfg  inventory.yml  pyproject.toml  requirements.yml
playbooks/: migrate_vips.yml  migrate_vips_v2.yml
tasks/: 01_create_partition.yml  02_discover.yml  03_migrate_monitors.yml  05_migrate_profiles.yml  06_migrate_pools.yml  07_cutover_virtual_servers.yml  08_cleanup_source.yml
tasks/v2/: 02_discover.yml  03_migrate_monitors.yml  04_migrate_policies.yml  05_migrate_profiles.yml  06_migrate_pools.yml  07_cutover_virtual_servers.yml  08_cleanup_source.yml  _translate_policy_rule.yml
vars/: main.yml  migration.yml  migration_v2.yml
