[project]
name = "ansible-vip-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-core>=2.21.0",
    "ansible-lint>=26.4.0",
    "cryptography>=49.0.0",
    "jmespath>=1.1.0",
    "netaddr>=1.3.0",
    "packaging>=26.2",
    "requests>=2.34.2",
]
